updated the html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <a href="#"><img src="img/logo.png" alt="App Name"></a>
-      <a href="#about">About Us</a>
+      
     </nav>
   </header>
 
@@ -19,6 +19,7 @@
       <div class="det-content">
         <div class="det-image">
           <img src="img/det-image3.png" alt="Det Image">
+          
         </div>
         <div class="det-description">
           <h2>Smart Rinse</h2>
@@ -33,13 +34,13 @@
   <div class="container">
     <h3>F I T U R</h3>
     <div class="feature">
-      <img src="img/det-image2.png" alt="Feature 1">
-      <h4>Feature 1</h4>
-      <p>Edit the description of feature 1 here.</p>
+      <img id="featureImage" src="img/det-image2.png" alt="Feature 1">
+      <h4 id="featureTitle">Feature 1</h4>
+      <p id="featureDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis id scelerisque turpis.</p>
     </div>
+    <button id="nextButton" onclick="showNextFeature()">N E X T</button>
   </div>
 </section>
-
   
   <script src="script.js"></script>
 </body>
