need to fix the responsive for top part

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
   <link rel="icon" type="image/png" href="img/logo.png"/>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
   <header>
@@ -23,7 +24,13 @@
         </div>
         <div class="det-description">
           <h2>Smart Rinse</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis id scelerisque turpis. Vestibulum malesuada dolor ac cursus sollicitudin. Vivamus rutrum tincidunt nulla, eu volutpat neque consectetur et.</p>
+          <p>Discover the future of laundry services with Smart Rinse,
+             a product designed to assist users in finding recommended laundry
+              facilities. Using advanced algorithms and machine learning,
+               this innovative device provides suggestions based on factors 
+               such as location, and customer reviews. Say goodbye to the 
+               difficulty of finding a reliable laundry services with Smart Rinse.</p>
+               <br>
           <a href="download-link" class="download-link">Download Now</a>
       </div>
     </div>
@@ -32,16 +39,70 @@
 
 <section id="features">
   <div class="container">
-    <h3>F I T U R</h3>
+    <h3>F E A T U R E S</h3>
     <div class="feature">
       <img id="featureImage" src="img/det-image2.png" alt="Feature 1">
       <h4 id="featureTitle">Feature 1</h4>
       <p id="featureDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis id scelerisque turpis.</p>
     </div>
-    <button id="nextButton" onclick="showNextFeature()">N E X T</button>
+    <button id="nextButton" onclick="showNextFeature()"><i class="fas fa-arrow-right"></i></button>
+  </div>
+</section>
+
+<section id="teams">
+  <div class="container">
+    <h3>O U R <br>T E A M S</h3>
+
+    <div class="team">
+      <img id="teamImage1" src="img/team-image.png" alt="Team 1">
+      <div class="teamContent">
+        <h4 id="teamTitle1">MOBILE DEVELOPMENT</h4>
+        <p id="teamDescription"><a href="https://github.com/whywidodo"  target="_blank"><i class="fab fa-github fa-2x" style="color: black;"></i>
+          </a>(MD) A135DSX1250 - Wahyu Widodo</p>
+      </div>
+    </div>
+
+    <div class="team">
+      <img id="teamImage2" src="img/team-image.png" alt="Team 2">
+      <div class="teamContent">
+        <h4 id="teamTitle2">CLOUD COMPUTING</h4>
+        <p id="teamDescription"><a href="https://github.com/asepirfans"  target="_blank"><i class="fab fa-github fa-2x" style="color: black;"></i>
+          </a>(CC) C055DSX4899 - Asep Irfan Setiawan</p>
+        <p id="teamDescription"><a href="https://github.com/sandxz"  target="_blank"><i class="fab fa-github fa-2x" style="color: black;"></i>
+          </a>(CC) C337DSX4869 - Sandro Nesta Pembrianno</p>
+      </div>
+    </div>
+
+    <div class="team">
+      <img id="teamImage2" src="img/team-image.png" alt="Team 2">
+      <div class="teamContent">
+        <h4 id="teamTitle2">MACHINE LEARNING</h4>
+        <p id="teamDescription"><a href="https://github.com/ramakc153"  target="_blank"><i class="fab fa-github fa-2x" style="color: black;"></i>
+        </a>(ML) M346DSX3745 - Ramadhana Noor Salassa Wandya</p>
+        <p id="teamDescription"><a href="https://github.com/Tirsa-P"  target="_blank"><i class="fab fa-github fa-2x" style="color: black;"></i>
+        </a>(ML) M282DSY0158 - Tirsa Pambayun</p>
+        <p id="teamDescription"><a href="https://github.com/MichaelMikez"  target="_blank"><i class="fab fa-github fa-2x" style="color: black;"></i>
+        </a>(ML) M149DSX2850 - Michael Adrian Winarlie</p>
+      </div>
+    </div>
+    
   </div>
 </section>
   
+<footer>
+  <div class="footer-container">
+    <div class="footer-content">
+      <p class="follow-text">FOLLOW OUR JOURNEY</p>
+      <div class="footer-social">
+        <a href="https://github.com/smart-rinse" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+    </div>
+    <p class="footer-text">Smart Rinse &copy; 2023. All rights reserved.</p>
+  </div>
+</footer>
+
   <script src="script.js"></script>
 </body>
 </html>
