--- a/index.html
+++ b/index.html
@@ -20,23 +20,16 @@
       <div class="det-content">
         <div class="det-image">
           <img src="img/det-image3.png" alt="Det Image">
-          
         </div>
         <div class="det-description">
           <h2>Smart Rinse</h2>
-          <p>Discover the future of laundry services with Smart Rinse,
-             a product designed to assist users in finding recommended laundry
-              facilities. Using advanced algorithms and machine learning,
-               this innovative device provides suggestions based on factors 
-               such as location, and customer reviews. Say goodbye to the 
-               difficulty of finding a reliable laundry services with Smart Rinse.</p>
-               <br>
+          <p>Discover the future of laundry services with Smart Rinse, a product designed to assist users in finding recommended laundry facilities. Using advanced algorithms and machine learning, this innovative device provides suggestions based on factors such as location and customer reviews. Say goodbye to the difficulty of finding a reliable laundry service with Smart Rinse.</p>
           <a href="download-link" class="download-link">Download Now</a>
+        </div>
       </div>
     </div>
-  </div>
-</section>
-
+  </section>  
+  
 <section id="features">
   <div class="container">
     <h3>F E A T U R E S</h3>
