--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h3>F E A T U R E S</h3>
     <div class="feature">
       <img id="featureImage" src="img/det-image2.png" alt="Feature 1">
-      <h4 id="featureTitle">Feature 1</h4>
+      <h4 id="featureTitle">Find Nearby Laundry</h4>
       <p id="featureDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis id scelerisque turpis.</p>
     </div>
     <button id="nextButton" onclick="showNextFeature()"><i class="fas fa-arrow-right"></i></button>
