--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="det-content">
         <div class="det-image">
-          <img src="img/det-image3.png" alt="Det Image">
+          <img src="img/test2.png" alt="Det Image">
         </div>
         <div class="det-description">
           <h2>Smart Rinse</h2>
