--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav>
       <a href="#"><img src="img/logo.png" alt="App Name"></a>
-      
+      <a href="#" class="coming-soon">Coming Soon</a>
     </nav>
   </header>
 
@@ -19,12 +19,12 @@
     <div class="container">
       <div class="det-content">
         <div class="det-image">
-          <img src="img/test2.png" alt="Det Image">
+          <img src="img/det-image4.png" alt="Det Image">
         </div>
         <div class="det-description">
           <h2>Smart Rinse</h2>
           <p>Discover the future of laundry services with Smart Rinse, a product designed to assist users in finding recommended laundry facilities. Using advanced algorithms and machine learning, this innovative device provides suggestions based on factors such as location and customer reviews. Say goodbye to the difficulty of finding a reliable laundry service with Smart Rinse.</p>
-          <a href="download-link" class="download-link">Download Now</a>
+          <a href="https://github.com/smart-rinse/smart-rinse-app/releases/tag/v1.1.0" class="download-link">Download Now</a>
         </div>
       </div>
     </div>
@@ -34,9 +34,9 @@
   <div class="container">
     <h3>F E A T U R E S</h3>
     <div class="feature">
-      <img id="featureImage" src="img/det-image2.png" alt="Feature 1">
-      <h4 id="featureTitle">Find Nearby Laundry</h4>
-      <p id="featureDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis id scelerisque turpis.</p>
+      <img id="featureImage" src="img/det1.png" alt="Feature 1">
+      <h4 id="featureTitle">Features and Services</h4>
+      <p id="featureDescription">things that our app provide</p>
     </div>
     <button id="nextButton" onclick="showNextFeature()"><i class="fas fa-arrow-right"></i></button>
   </div>
